--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -29,7 +29,7 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="">Home</a>
+                        <a href="">Home1</a>
                     </li>
                     <li>
                         <a href="">About Us</a>
