--- a/src/styles.css
+++ b/src/styles.css
@@ -19,3 +19,5 @@ a{
 ul li{
    list-style-type: none;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
