--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,14 @@
 <header>
     <div class="top-container">
         <div class="top-container-in">
-            <a href="" routerLink="/"><img src="/src/assets/search.svg" height="20px" width="20px"></a>
+            <a href="" routerLink="/">
+                <mat-icon>
+                    <span class="material-symbols-outlined">
+                    search
+                    </span>
+                </mat-icon>
+                
+            </a>
             <nav>
                 <ul>
                     <li>
