--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,13 @@
-<app-header></app-header>
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <app-header></app-header>
+    <router-outlet></router-outlet>
+</body>
+</html>
