--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,59 +1,30 @@
-<header>
-    <div class="top-container">
-        <div class="top-container-in">
-            <a href="" routerLink="/">
-                <mat-icon>
-                    <span class="material-symbols-outlined">
-                    search
-                    </span>
-                </mat-icon>
-                
-            </a>
-            <nav>
-                <ul>
-                    <li>
-                        <a href="">Facebook</a>
-                    </li>
-                    <li>
-                        <a href="">Twitter</a>
-                    </li>
-                    <li>
-                        <a href="">Insta</a>
-                    </li>
-                    <li>
-                        <a href="">LinkdIn</a>
-                    </li>
-    
-                </ul>
-            </nav>
-        </div>
-       
+<nav class="navbar navbar-expand-lg bg-body-primary text-bg-primary">
+  <div class="container-fluid container">
+    <a class="navbar-brand" href="#">
+      <img src="assets/Mirrorworld.webp" alt="" width="50" height="24">
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" [routerLink]="['/']" >Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/articles']">Articles</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/addarticles']">Add Articles</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link"  [routerLink]="['/contactus']">Contact Us</a>
+        </li>
+      </ul>
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
     </div>
-    <div class="bottom-container">
-
-        <div class="bottom-container-in">
-            <a href="" routerLink="/"><img src="/src/assets/Mirrorworld.webp" alt="img"></a>
-            <nav>
-                <ul>
-                    <li>
-                        <a href="">Home1</a>
-                    </li>
-                    <li>
-                        <a href="">About Us</a>
-                    </li>
-                    <li>
-                        <a href="">Magazine</a>
-                    </li>
-                    <li>
-                        <a href="">Articles</a>
-                    </li>
-                    <li>
-                        <a href="">Contact Us</a>
-                    </li>
-    
-                </ul>
-            </nav>
-        </div>
-    </div>
-    
-</header>
+  </div>
+</nav>
