--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -20,29 +20,34 @@
                 </mat-icon></button>
             </div>
         </div>
-        <div class="slider-div">
-            <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="assets/sample.jpg" class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="assets/sample.jpg" class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="assets/sample.jpg" class="d-block w-100" alt="...">
-                  </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
-              </div>
-        </div>
+       
+    </div>
+
+    <div class="sd">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores repudiandae id illum quas explicabo eligendi, tempora expedita nemo vel, delectus corporis atque, aspernatur ipsam reprehenderit aliquid tenetur temporibus similique neque?
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio, provident rerum sit placeat possimus itaque? Debitis ullam corrupti accusantium numquam cupiditate quasi tempora architecto delectus dolorum a, atque aut libero.
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore officia a sapiente rerum dicta, dignissimos error iusto eveniet beatae placeat! Quos ipsum unde dolores commodi nihil suscipit dolorem illo ipsam?
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores repudiandae id illum quas explicabo eligendi, tempora expedita nemo vel, delectus corporis atque, aspernatur ipsam reprehenderit aliquid tenetur temporibus similique neque?
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio, provident rerum sit placeat possimus itaque? Debitis ullam corrupti accusantium numquam cupiditate quasi tempora architecto delectus dolorum a, atque aut libero.
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore officia a sapiente rerum dicta, dignissimos error iusto eveniet beatae placeat! Quos ipsum unde dolores commodi nihil suscipit dolorem illo ipsam?
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas quidem ut
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores repudiandae id illum quas explicabo eligendi, tempora expedita nemo vel, delectus corporis atque, aspernatur ipsam reprehenderit aliquid tenetur temporibus similique neque?
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio, provident rerum sit placeat possimus itaque? Debitis ullam corrupti accusantium numquam cupiditate quasi tempora architecto delectus dolorum a, atque aut libero.
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore officia a sapiente rerum dicta, dignissimos error iusto eveniet beatae placeat! Quos ipsum unde dolores commodi nihil suscipit dolorem illo ipsam?
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas quidem ut
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores repudiandae id illum quas explicabo eligendi, tempora expedita nemo vel, delectus corporis atque, aspernatur ipsam reprehenderit aliquid tenetur temporibus similique neque?
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio, provident rerum sit placeat possimus itaque? Debitis ullam corrupti accusantium numquam cupiditate quasi tempora architecto delectus dolorum a, atque aut libero.
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore officia a sapiente rerum dicta, dignissimos error iusto eveniet beatae placeat! Quos ipsum unde dolores commodi nihil suscipit dolorem illo ipsam?
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas quidem ut
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores repudiandae id illum quas explicabo eligendi, tempora expedita nemo vel, delectus corporis atque, aspernatur ipsam reprehenderit aliquid tenetur temporibus similique neque?
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio, provident rerum sit placeat possimus itaque? Debitis ullam corrupti accusantium numquam cupiditate quasi tempora architecto delectus dolorum a, atque aut libero.
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore officia a sapiente rerum dicta, dignissimos error iusto eveniet beatae placeat! Quos ipsum unde dolores commodi nihil suscipit dolorem illo ipsam?
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas quidem ut
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores repudiandae id illum quas explicabo eligendi, tempora expedita nemo vel, delectus corporis atque, aspernatur ipsam reprehenderit aliquid tenetur temporibus similique neque?
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio, provident rerum sit placeat possimus itaque? Debitis ullam corrupti accusantium numquam cupiditate quasi tempora architecto delectus dolorum a, atque aut libero.
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore officia a sapiente rerum dicta, dignissimos error iusto eveniet beatae placeat! Quos ipsum unde dolores commodi nihil suscipit dolorem illo ipsam?
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas quidem ut
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas quidem ut accusantium illum est iste laboriosam accusamus beatae inventore, ipsam fugiat quisquam distinctio odit voluptates quos officiis autem voluptas numquam!
     </div>
 </body>
 </html>
