--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,11 +1,13 @@
-<nav class="navbar navbar-expand-lg bg-body-primary text-bg-primary">
-  <div class="container-fluid container">
-    <a class="navbar-brand" href="#">
-      <img src="assets/Mirrorworld.webp" alt="" width="50" height="24">
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+<div class="myNav">
+
+  <nav class="navbar navbar-expand-lg bg-body-primary sticky-top text-bg-primary">
+    <div class="container-fluid container">
+      <a class="navbar-brand" href="#">
+        <img src="assets/Mirrorworld.webp" alt="" width="50" height="24">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
@@ -28,3 +30,4 @@
     </div>
   </div>
 </nav>
+</div>
