--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,4 +1,26 @@
-/* .myNav{
-   position: fixed;
-   width: 99vw;
-} */
+.fixed {
+    position: fixed;
+    width: 100%;
+    transition: 0.5s linear;
+    top: 0px;
+}
+
+.nofixed {
+    position: static;
+    transition: 0.5s linear;
+    top: -50px;
+}
+.navbar-top {
+    background:linear-gradient(to right,blue , green);
+}
+.navbar-top a{
+    color:white;
+}
+.navbar-brand{
+    margin-right: 26pt;
+}
+
+.navbar-bottom{
+    color: white;
+    background-color: black;
+}
