--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,7 @@
-<div class="myNav">
 
-  <nav class="navbar navbar-expand-lg bg-body-primary sticky-top text-bg-primary">
+
+  <nav class="navbar navbar-top navbar-expand-lg bg-body-primary fixed-top" 
+    (scroll)="onscroll()" [ngClass]="navbarfixed?'fixed':'nofixed'">
     <div class="container-fluid container">
       <a class="navbar-brand" href="#">
         <img src="assets/Mirrorworld.webp" alt="" width="50" height="24">
@@ -25,9 +26,32 @@
       </ul>
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
+        <button class="btn btn-outline-danger" type="submit">Search</button>
       </form>
     </div>
   </div>
 </nav>
-</div>
+<nav class="navbar navbar-bottom">
+ 
+    <div class="container ">
+      <div class="promo">
+        Get A Chance To Feature In Magazine By Submitting Your Interview Today!
+      </div>
+      <div class="Smedia">
+
+        <a class="navbar-brand" href="https://www.facebook.com/" target="_blank">
+          <img src="assets/facebook-icon.svg" alt="Bootstrap" width="30" height="24">
+        </a>
+        <a class="navbar-brand" href="https://twitter.com/?lang=en" target="_blank">
+          <img src="assets/icons8-twitter.svg" alt="Bootstrap" width="30" height="24">
+        </a>
+        <a class="navbar-brand" href="https://www.instagram.com/" target="_blank">
+          <img src="assets/icons8-instagram.svg" alt="Bootstrap" width="30" height="24">
+        </a>
+        <a class="navbar-brand" href="https://in.linkedin.com/" target="_blank">
+        <img src="assets/icons8-linkedin.svg" alt="Bootstrap" width="30" height="24">
+      </a>
+    </div>
+    </div>
+  
+</nav>
