--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -6,48 +6,35 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="sliderBox">
-        <div class="text-div">
-            <div class="inner-text-div">
-                <h1>Here will be the Heading</h1>
-                <p>Sub Heading Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur tempore, provident rem, hic ullam dolor
-                    um qui quae eaque, inventore velit dolorem. Rerum eius itaque sit! Harum nam consequatur ea recusandae!</p>
-              
-                <button mat-button color="accent"> Know More<mat-icon>
-                    <span class="material-symbols-outlined">
-                        arrow_forward
-                   </span>
-                </mat-icon></button>
-            </div>
-        </div>
+   <div class="content-and-slider">
+    <div class="left-content">
+        <h1 style="text-align: center; text-decoration: underline;">Latest Articles</h1>
+    </div>
+    <div class="right-slider">
        
+        <div id="carouselExampleAutoplaying" class="carousel slide mx-4" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="assets/pexels-erik-mclean-7524997.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="assets/pexels-erik-mclean-7524998.jpg"  class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="assets/pexels-natasha-kendall-4093392.jpg"  class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          
+       </div>
     </div>
-
-    <div class="sd">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores repudiandae id illum quas explicabo eligendi, tempora expedita nemo vel, delectus corporis atque, aspernatur ipsam reprehenderit aliquid tenetur temporibus similique neque?
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio, provident rerum sit placeat possimus itaque? Debitis ullam corrupti accusantium numquam cupiditate quasi tempora architecto delectus dolorum a, atque aut libero.
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore officia a sapiente rerum dicta, dignissimos error iusto eveniet beatae placeat! Quos ipsum unde dolores commodi nihil suscipit dolorem illo ipsam?
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores repudiandae id illum quas explicabo eligendi, tempora expedita nemo vel, delectus corporis atque, aspernatur ipsam reprehenderit aliquid tenetur temporibus similique neque?
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio, provident rerum sit placeat possimus itaque? Debitis ullam corrupti accusantium numquam cupiditate quasi tempora architecto delectus dolorum a, atque aut libero.
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore officia a sapiente rerum dicta, dignissimos error iusto eveniet beatae placeat! Quos ipsum unde dolores commodi nihil suscipit dolorem illo ipsam?
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas quidem ut
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores repudiandae id illum quas explicabo eligendi, tempora expedita nemo vel, delectus corporis atque, aspernatur ipsam reprehenderit aliquid tenetur temporibus similique neque?
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio, provident rerum sit placeat possimus itaque? Debitis ullam corrupti accusantium numquam cupiditate quasi tempora architecto delectus dolorum a, atque aut libero.
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore officia a sapiente rerum dicta, dignissimos error iusto eveniet beatae placeat! Quos ipsum unde dolores commodi nihil suscipit dolorem illo ipsam?
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas quidem ut
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores repudiandae id illum quas explicabo eligendi, tempora expedita nemo vel, delectus corporis atque, aspernatur ipsam reprehenderit aliquid tenetur temporibus similique neque?
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio, provident rerum sit placeat possimus itaque? Debitis ullam corrupti accusantium numquam cupiditate quasi tempora architecto delectus dolorum a, atque aut libero.
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore officia a sapiente rerum dicta, dignissimos error iusto eveniet beatae placeat! Quos ipsum unde dolores commodi nihil suscipit dolorem illo ipsam?
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas quidem ut
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores repudiandae id illum quas explicabo eligendi, tempora expedita nemo vel, delectus corporis atque, aspernatur ipsam reprehenderit aliquid tenetur temporibus similique neque?
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio, provident rerum sit placeat possimus itaque? Debitis ullam corrupti accusantium numquam cupiditate quasi tempora architecto delectus dolorum a, atque aut libero.
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore officia a sapiente rerum dicta, dignissimos error iusto eveniet beatae placeat! Quos ipsum unde dolores commodi nihil suscipit dolorem illo ipsam?
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas quidem ut
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores repudiandae id illum quas explicabo eligendi, tempora expedita nemo vel, delectus corporis atque, aspernatur ipsam reprehenderit aliquid tenetur temporibus similique neque?
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio, provident rerum sit placeat possimus itaque? Debitis ullam corrupti accusantium numquam cupiditate quasi tempora architecto delectus dolorum a, atque aut libero.
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore officia a sapiente rerum dicta, dignissimos error iusto eveniet beatae placeat! Quos ipsum unde dolores commodi nihil suscipit dolorem illo ipsam?
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas quidem ut
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas quidem ut accusantium illum est iste laboriosam accusamus beatae inventore, ipsam fugiat quisquam distinctio odit voluptates quos officiis autem voluptas numquam!
-    </div>
+   </div>
 </body>
 </html>
