--- a/src/app/content/content.component.css
+++ b/src/app/content/content.component.css
@@ -1,28 +1,30 @@
-.sliderBox{
+.content-and-slider{
     display: flex;
-    height: 60vh;
     width: 99vw;
-    background-color: rgb(157, 157, 201);
+    height: 60vh;
+    background-color: antiquewhite;
 }
 
-.text-div{
-flex: 1;
-    background-color: rgb(35, 69, 99);
+body{
+    margin: 0;
+    padding: 0;
 }
 
-.inner-text-div{
-    margin: 50px;
-}
 
-.slider-div{
-    justify-content: center;
-    display: flex;
-    align-items: center;
+
+.left-content{
     flex: 1;
-    background-color: rgb(162, 105, 29);
+    background-color: aqua;
+}
+.right-slider{
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex: 1;
+    background-color: aquamarine;
 }
 
-.carousel{
-    width: 30vw;
-    height: 30vh;
+ img{
+    width: 90vw;
+    height: 50vh;
 }
