api-image-upload

--- a/src/app/articles/articles.component.html
+++ b/src/app/articles/articles.component.html
@@ -1,2 +1,8 @@
 <p>articles works!</p>
 <h1>hello this is articles</h1>
+<h1>{{message}}</h1>
+<!-- <h1>{{imageUrl}}</h1> -->
+<div>
+    <img [src]="imageUrl" alt="Image" width="200px" height="200px" >
+</div>
+  
