footer-file-upload

--- a/src/app/articles/articles.component.html
+++ b/src/app/articles/articles.component.html
@@ -5,4 +5,53 @@
 <div>
     <img [src]="imageUrl" alt="Image" width="200px" height="200px" >
 </div>
-  
+  <!-- <div class="container-fluid widget-wrapper">
+    
+    <div class="card col inner">
+        <div class="row">
+            <div class="col-md-2">
+                <div class="card-body">
+                    <p class="card-text">asdfghjkfghjasdfghjmnhbasdfghjkfghjasdfghjmnhbgfvdcsxdefrgthyjnbgvcasdfghjkfghjasdfghjmnhbgfvdcsxdefrgthyjnbgvc</p>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <img src="assets/Mirrorworld.webp" alt="articles" style="width: 25vw; height: 20vw;">
+                
+            </div>
+            <div class="col-md-1"></div>
+            <div class="col-md-3">
+                <img src="assets/Mirrorworld.webp" alt="articles" style="width: 25vw; height: 20vw;">
+            </div>
+            <div class="col-md-2">
+                <div class="card-body">
+                    <p class="card-text">asdfghjkfghjasdfghjmnhbasdfghjkfghjasdfghjmnhbgfvdcsxdefrgthyjnbgvcasdfghjkfghjasdfghjmnhbgfvdcsxdefrgthyjnbgvc   gfvdcsxdefrgthyjnbgvc</p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+           
+        </div>
+    </div>
+    
+ -->
+ <div class="container-fluid widget-wrapper">
+    <div class="card col inner">
+        <div class="row">
+            <!-- First part of the row: text and image -->
+            <div class="col-md-6">
+                
+                <div class="card-body">
+                    <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio quidem harum, illum, tempore ipsa sunt, facere perferendis doloremque culpa ipsam debitis molestias voluptatem? Odit ipsa aliquam error dignissimos mollitia distinctio.</p>
+                </div>
+                <img src="assets/sample.jpg" alt="articles" style="width: 80%; height: auto;">
+            </div>
+            <!-- Second part of the row: image and text -->
+            <div class="col-md-6">
+                <img src="assets/sample.jpg" alt="articles" style="width: 80%; height: auto;">
+                <div class="card-body">
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non ducimus laborum eveniet quod reiciendis corrupti itaque? Molestias saepe minima necessitatibus eos vero soluta rem, labore dolorem veniam inventore unde hic.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
