--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,8 +3,8 @@
   <nav class="navbar navbar-top navbar-expand-lg bg-body-primary fixed-top" 
     (scroll)="onscroll()" [ngClass]="navbarfixed?'fixed':'nofixed'">
     <div class="container-fluid container">
-      <a class="navbar-brand" href="#">
-        <img src="assets/Mirrorworld.webp" alt="" width="50" height="24">
+      <a class="navbar-brand" href="#"  class="navbar-brand">
+        <img src="assets/Mirrorworld.webp" alt="" class="logo">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
