--- a/src/app/add-article/add-article.component.html
+++ b/src/app/add-article/add-article.component.html
@@ -21,3 +21,49 @@
     </div>
   </form>
 </div>
+<div class="container mt-3 col-5">
+  <form [formGroup]="articleForm" (ngSubmit)="onSubmit()">
+    <div class="mb-3">
+      <label for="title" class="form-label">Title</label>
+      <input type="text" class="form-control" id="title" formControlName="title" placeholder="Enter article title">
+    </div>
+    <div class="mb-3">
+      <label for="author" class="form-label">Author</label>
+      <input type="text" class="form-control" id="author" formControlName="author" placeholder="Enter Author Name">
+    </div>
+    <div class="mb-3">
+      <label for="content" class="form-label">Content</label>
+      <textarea class="form-control" id="content" formControlName="content" rows="3"></textarea>
+    </div>
+    <div class="mb-3">
+      <label for="file" class="form-label">File</label>
+      <input type="file" id="file" name="file" (change)="onFileSelected($event)">
+    </div>
+    <div class="d-grid gap-2 col-3">
+      <button class="btn btn-primary" type="submit">Submit</button>
+    </div>
+  </form>
+</div>
+<div class="container mt-3 col-5">
+  <form [formGroup]="articleForm" (ngSubmit)="onSubmit()">
+    <div class="mb-3">
+      <label for="title" class="form-label">Title</label>
+      <input type="text" class="form-control" id="title" formControlName="title" placeholder="Enter article title">
+    </div>
+    <div class="mb-3">
+      <label for="author" class="form-label">Author</label>
+      <input type="text" class="form-control" id="author" formControlName="author" placeholder="Enter Author Name">
+    </div>
+    <div class="mb-3">
+      <label for="content" class="form-label">Content</label>
+      <textarea class="form-control" id="content" formControlName="content" rows="3"></textarea>
+    </div>
+    <div class="mb-3">
+      <label for="file" class="form-label">File</label>
+      <input type="file" id="file" name="file" (change)="onFileSelected($event)">
+    </div>
+    <div class="d-grid gap-2 col-3">
+      <button class="btn btn-primary" type="submit">Submit</button>
+    </div>
+  </form>
+</div>
