--- a/src/app/articles/articles.component.html
+++ b/src/app/articles/articles.component.html
@@ -1,57 +1,8 @@
-<p>articles works!</p>
-<h1>hello this is articles</h1>
-<h1>{{message}}</h1>
-<!-- <h1>{{imageUrl}}</h1> -->
-<div>
-    <img [src]="imageUrl" alt="Image" width="200px" height="200px" >
-</div>
-  <!-- <div class="container-fluid widget-wrapper">
-    
-    <div class="card col inner">
-        <div class="row">
-            <div class="col-md-2">
-                <div class="card-body">
-                    <p class="card-text">asdfghjkfghjasdfghjmnhbasdfghjkfghjasdfghjmnhbgfvdcsxdefrgthyjnbgvcasdfghjkfghjasdfghjmnhbgfvdcsxdefrgthyjnbgvc</p>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <img src="assets/Mirrorworld.webp" alt="articles" style="width: 25vw; height: 20vw;">
-                
-            </div>
-            <div class="col-md-1"></div>
-            <div class="col-md-3">
-                <img src="assets/Mirrorworld.webp" alt="articles" style="width: 25vw; height: 20vw;">
-            </div>
-            <div class="col-md-2">
-                <div class="card-body">
-                    <p class="card-text">asdfghjkfghjasdfghjmnhbasdfghjkfghjasdfghjmnhbgfvdcsxdefrgthyjnbgvcasdfghjkfghjasdfghjmnhbgfvdcsxdefrgthyjnbgvc   gfvdcsxdefrgthyjnbgvc</p>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-           
-        </div>
-    </div>
-    
- -->
- <div class="container-fluid widget-wrapper">
-    <div class="card col inner">
-        <div class="row">
-            <!-- First part of the row: text and image -->
-            <div class="col-md-6">
-                
-                <div class="card-body">
-                    <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio quidem harum, illum, tempore ipsa sunt, facere perferendis doloremque culpa ipsam debitis molestias voluptatem? Odit ipsa aliquam error dignissimos mollitia distinctio.</p>
-                </div>
-                <img src="assets/sample.jpg" alt="articles" style="width: 80%; height: auto;">
-            </div>
-            <!-- Second part of the row: image and text -->
-            <div class="col-md-6">
-                <img src="assets/sample.jpg" alt="articles" style="width: 80%; height: auto;">
-                <div class="card-body">
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non ducimus laborum eveniet quod reiciendis corrupti itaque? Molestias saepe minima necessitatibus eos vero soluta rem, labore dolorem veniam inventore unde hic.</p>
-                </div>
-            </div>
-        </div>
-    </div>
+<!-- articles.component.html -->
+<br><br><br>
+<input type="file" (change)="onFileSelected($event)">
+<button (click)="onUpload()">Upload</button>
+<br><br><br>
+<div *ngFor="let imageUrl of imageUrls" class="image-container">
+  <img [src]="imageUrl" height="300px" width="300px"><br><br>
 </div>
