--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,10 @@
 
-
-  <nav class="navbar navbar-top navbar-expand-lg bg-body-primary fixed-top" 
-    (scroll)="onscroll()" [ngClass]="navbarfixed?'fixed':'nofixed'">
+<!-- my-component.component.html -->
+<div class="container-fluid p-0">
+  <nav class="navbar navbar-expand-lg navbar-dark fixed-top navbar-top"  (scroll)="onscroll()" [ngClass]="navbarfixed?'fixed':'nofixed'">
     <div class="container-fluid container">
-      <a class="navbar-brand" href="#"  class="navbar-brand">
-        <img src="assets/Mirrorworld.webp" alt="" class="logo">
+      <a class="navbar-brand" href="#" style="position: center;">
+        <img src="assets/logo.png" alt="" width="150" height="50">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -12,25 +12,41 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" [routerLink]="['/']" >Home</a>
+          <a class="nav-link active" aria-current="page" [routerLink]="['/']">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/articles']">Articles</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/articles']">Magazines</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/articles']">Industry</a>
+        </li>
+       
+        <li class="nav-item">
           <a class="nav-link" [routerLink]="['/addarticles']">Add Articles</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/addarticles']">Add Magazines</a>
         </li>
         <li class="nav-item">
           <a class="nav-link"  [routerLink]="['/contactus']">Contact Us</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link"  [routerLink]="['/contactus']">About Us</a>
+        </li>
       </ul>
-      <form class="d-flex" role="search">
+      <!-- <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-danger" type="submit">Search</button>
-      </form>
+      </form> -->
     </div>
   </div>
-</nav>
+  </nav>
+  
+</div>
+
 <nav class="navbar navbar-bottom">
  
     <div class="container ">
