--- a/src/app/add-article/add-article.component.html
+++ b/src/app/add-article/add-article.component.html
@@ -1,5 +1,5 @@
 <div class="container mt-3 col-5">
-  <form [formGroup]="articleForm" (ngSubmit)="onSubmit()">
+  <form [formGroup]="articleForm" (ngSubmit)="onSubmit()" enctype="multipart/form-data">
     <div class="mb-3">
       <label for="title" class="form-label">Title</label>
       <input type="text" class="form-control" id="title" formControlName="title" placeholder="Enter article title">
@@ -12,55 +12,22 @@
       <label for="content" class="form-label">Content</label>
       <textarea class="form-control" id="content" formControlName="content" rows="3"></textarea>
     </div>
+    <!-- <div class="mb-3">
+      <label for="content" class="form-label">Industy</label>
+      <input class="form-control" id="industry" formControlName="industry" rows="3">
+    </div> -->
+
+    <select class="form-select"  formControlName="industry" id="industry" aria-label="Default select example">
+      <option selected>---Select Industry---</option>
+      <option value="Service">Service</option>
+      <option value="Financial">Financial</option>
+      <option value="Manufacturing">Manufacturing</option>
+    </select>
+
+
     <div class="mb-3">
       <label for="file" class="form-label">File</label>
-      <input type="file" id="file" name="file" (change)="onFileSelected($event)">
-    </div>
-    <div class="d-grid gap-2 col-3">
-      <button class="btn btn-primary" type="submit">Submit</button>
-    </div>
-  </form>
-</div>
-<div class="container mt-3 col-5">
-  <form [formGroup]="articleForm" (ngSubmit)="onSubmit()">
-    <div class="mb-3">
-      <label for="title" class="form-label">Title</label>
-      <input type="text" class="form-control" id="title" formControlName="title" placeholder="Enter article title">
-    </div>
-    <div class="mb-3">
-      <label for="author" class="form-label">Author</label>
-      <input type="text" class="form-control" id="author" formControlName="author" placeholder="Enter Author Name">
-    </div>
-    <div class="mb-3">
-      <label for="content" class="form-label">Content</label>
-      <textarea class="form-control" id="content" formControlName="content" rows="3"></textarea>
-    </div>
-    <div class="mb-3">
-      <label for="file" class="form-label">File</label>
-      <input type="file" id="file" name="file" (change)="onFileSelected($event)">
-    </div>
-    <div class="d-grid gap-2 col-3">
-      <button class="btn btn-primary" type="submit">Submit</button>
-    </div>
-  </form>
-</div>
-<div class="container mt-3 col-5">
-  <form [formGroup]="articleForm" (ngSubmit)="onSubmit()">
-    <div class="mb-3">
-      <label for="title" class="form-label">Title</label>
-      <input type="text" class="form-control" id="title" formControlName="title" placeholder="Enter article title">
-    </div>
-    <div class="mb-3">
-      <label for="author" class="form-label">Author</label>
-      <input type="text" class="form-control" id="author" formControlName="author" placeholder="Enter Author Name">
-    </div>
-    <div class="mb-3">
-      <label for="content" class="form-label">Content</label>
-      <textarea class="form-control" id="content" formControlName="content" rows="3"></textarea>
-    </div>
-    <div class="mb-3">
-      <label for="file" class="form-label">File</label>
-      <input type="file" id="file" name="file" (change)="onFileSelected($event)">
+      <input type="file" id="file" name="articleImage" (change)="onFileSelected($event)">
     </div>
     <div class="d-grid gap-2 col-3">
       <button class="btn btn-primary" type="submit">Submit</button>
